[package]
name = "new_pbft"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] } # latest
serde_json = "1.0.133" # latest
bincode = "1.3.3" # latest

tokio = { version = "1.41.1", features = ["full"] } # latest


rsa = { version = "0.9.7", features = ["sha2"] } # latest
rand = "0.8.5"
sha2 = "0.10.8"


actix-web = "4.9.0" # latest


reqwest = { version = "0.12", features = ["json"] }


rocksdb = "0.23.0"

thiserror = "2.0.11"

dotenv = "0.15.0"